@@ -5,21 +5,21 @@ import com.palantir.javapoet.FieldSpec;
 import com.palantir.javapoet.MethodSpec;
 import com.palantir.javapoet.ParameterSpec;
 import com.palantir.javapoet.TypeName;
+import java.util.List;
 import net.zerobuilder.compiler.generate.DtoContext.GoalContext;
 import net.zerobuilder.compiler.generate.DtoGeneratorOutput.BuilderMethod;
 import net.zerobuilder.compiler.generate.DtoGoalDetails.AbstractRegularDetails;
+import net.zerobuilder.compiler.generate.DtoGoalDetails.ConstructorGoalDetails;
+import net.zerobuilder.compiler.generate.DtoGoalDetails.InstanceMethodGoalDetails;
+import net.zerobuilder.compiler.generate.DtoGoalDetails.StaticMethodGoalDetails;
 import net.zerobuilder.compiler.generate.DtoRegularGoalDescription.SimpleRegularGoalDescription;
 import net.zerobuilder.compiler.generate.DtoRegularParameter.SimpleParameter;
-
-import java.util.List;
-import java.util.function.Function;
 
 import static com.palantir.javapoet.MethodSpec.methodBuilder;
 import static javax.lang.model.element.Modifier.FINAL;
 import static javax.lang.model.element.Modifier.PRIVATE;
 import static javax.lang.model.element.Modifier.STATIC;
 import static net.zerobuilder.compiler.generate.DtoGoalDetails.isInstance;
-import static net.zerobuilder.compiler.generate.DtoGoalDetails.regularDetailsCases;
 import static net.zerobuilder.compiler.generate.ZeroUtil.downcase;
 import static net.zerobuilder.compiler.generate.ZeroUtil.fieldSpec;
 import static net.zerobuilder.compiler.generate.ZeroUtil.parameterSpec;
@@ -34,25 +34,27 @@ final class Generator {
     AbstractRegularDetails abstractRegularDetails = description.details;
     List<SimpleParameter> steps = description.parameters;
     MethodSpec.Builder method = methodBuilder(RegularBuilder.methodName(description))
-        .returns(RegularBuilder.contractType(description).nestedClass(upcase(steps.get(0).name)))
+        .returns(RegularBuilder.contractType(description).nestedClass(upcase(steps.getFirst().name)))
         .addModifiers(abstractRegularDetails.access(STATIC));
     GoalContext context = description.context;
     ParameterSpec varInstance = parameterSpec(context.type,
         downcase(simpleName(context.type)));
-    CodeBlock returnBlock = returnBlock(description, varInstance).apply(description.details);
+    CodeBlock returnBlock = returnBlock(description, varInstance);
     method.addCode(returnBlock);
-    if (isInstance.apply(description.details)) {
+    if (isInstance(description.details)) {
       method.addParameter(varInstance);
     }
-    return new BuilderMethod(description.details.name, method.build());
+    return new BuilderMethod(description.details.name(), method.build());
   }
 
-  private static Function<AbstractRegularDetails, CodeBlock> returnBlock(SimpleRegularGoalDescription description,
-                                                                         ParameterSpec varInstance) {
-    return regularDetailsCases(
-        constructor -> returnRegular(description),
-        staticMethod -> returnRegular(description),
-        instanceMethod -> returnInstanceMethod(description, varInstance));
+  private static CodeBlock returnBlock(
+      SimpleRegularGoalDescription description,
+      ParameterSpec varInstance) {
+    return switch (description.details) {
+      case ConstructorGoalDetails constructor -> returnRegular(description);
+      case StaticMethodGoalDetails staticMethod -> returnRegular(description);
+      case InstanceMethodGoalDetails instanceMethod -> returnInstanceMethod(description, varInstance);
+    };
   }
 
   private static CodeBlock returnRegular(SimpleRegularGoalDescription description) {
